tests/lean/tst9.lean.expected.out
  Set: pp::colors
  Assumed: f
  Assumed: N
  Assumed: g
  Assumed: a
Error (line: 6, pos: 6) type mismatch at application
    g ⊤ (f _ a a)
function type
    N → N → Bool
arguments types
    Bool
    ?M0
